force-app/main/default/objects/openq__MobileQ_Exception__c/openq__MobileQ_Exception__c.object-meta.xml
<CustomObject>
    <label>MobileQ Exception</label>
    <nameField>
        <displayFormat>MQ-{0000}</displayFormat>
        <label>MobileQ Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MobileQ Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>