force-app/main/default/objects/openq__MobileQ_Exception__c/fields/openq__Exception__c.field-meta.xml
<CustomField>
    <fullName>openq__Exception__c</fullName>
    <label>Exception</label>
    <type>TextArea</type>
</CustomField>