force-app/main/default/objects/openq__MobileQ_Exception__c/fields/openq__Line_Number__c.field-meta.xml
<CustomField>
    <fullName>openq__Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>