force-app/main/default/objects/openq__MobileQ_Exception__c/fields/openq__Type__c.field-meta.xml
<CustomField>
    <fullName>openq__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>