force-app/main/default/objects/openq__MobileQ_Exception__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>